--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Moon+Dance&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>welcome !</h1>
+    <section class="header">
+      <div class="about_mission">
+        <h1>Stay Focused on <br /><span>Mission 2022</span></h1>
+        <p>
+          My biggest mission of 2022 is be a web developer.compeleteing
+          programming hero course sincerly .achiving SCIC .
+        </p>
+        <a class="buttons" href="https://www.linkedin.com/in/eshratjahan17/"
+          >Explore Now</a
+        >
+
+        <p><small>Scroll down to explore more about me</small></p>
+      </div>
+      <div class="my_img">
+        <img
+          src="images/person/person-0.png"
+          alt="person image"
+          width="400"
+          height="450"
+        />
+      </div>
+    </section>
   </body>
 </html>
