--- a/index.html
+++ b/index.html
@@ -37,5 +37,46 @@
         />
       </div>
     </section>
+    <section class="my_mission">
+      <div>
+        <h2>My Mission in <span> 2022</span></h2>
+      </div>
+      <div class="Goals">
+        <div>
+          <img
+            class="icons"
+            src="images/illustrators/illustrator-1.png"
+            alt="image1"
+          />
+          <h4>Mission</h4>
+          <p>
+            My biggest mission of 2022 is be a web developer.compeleteing
+            programming hero course sincerly .achiving SCIC .compeleteing
+            programming hero course sincerly .achiving SCIC .compeleteing
+            programming hero course sincerly .achiving SCIC .
+          </p>
+        </div>
+        <div>
+          <img src="images/illustrators/illustrator-2.png" alt="image2" />
+          <h4>Vission</h4>
+          <p>
+            My biggest mission of 2022 is be a web developer.compeleteing
+            programming hero course sincerly .achiving SCIC .compeleteing
+            programming hero course sincerly .achiving SCIC .compeleteing
+            programming hero course sincerly .achiving SCIC .
+          </p>
+        </div>
+        <div>
+          <img src="images/illustrators/illustrator-3.png" alt="image3" />
+          <h4>Goals</h4>
+          <p>
+            My biggest mission of 2022 is be a web developer.compeleteing
+            programming hero course sincerly .achiving SCIC .compeleteing
+            programming hero course sincerly .achiving SCIC .compeleteing
+            programming hero course sincerly .achiving SCIC .
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
