--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <div>
         <h2>My Mission in <span> 2022</span></h2>
       </div>
-      <div class="Goals">
-        <div>
+      <div class="my_missions">
+        <div id="mission">
           <img
             class="icons"
             src="images/illustrators/illustrator-1.png"
@@ -51,28 +51,30 @@
           <h4>Mission</h4>
           <p>
             My biggest mission of 2022 is be a web developer.compeleteing
-            programming hero course sincerly .achiving SCIC .compeleteing
-            programming hero course sincerly .achiving SCIC .compeleteing
             programming hero course sincerly .achiving SCIC .
           </p>
         </div>
-        <div>
-          <img src="images/illustrators/illustrator-2.png" alt="image2" />
+        <div id="vission">
+          <img
+            class="icons"
+            src="images/illustrators/illustrator-2.png"
+            alt="image2"
+          />
           <h4>Vission</h4>
           <p>
             My biggest mission of 2022 is be a web developer.compeleteing
-            programming hero course sincerly .achiving SCIC .compeleteing
-            programming hero course sincerly .achiving SCIC .compeleteing
             programming hero course sincerly .achiving SCIC .
           </p>
         </div>
-        <div>
-          <img src="images/illustrators/illustrator-3.png" alt="image3" />
+        <div id="goals">
+          <img
+            class="icons"
+            src="images/illustrators/illustrator-3.png"
+            alt="image3"
+          />
           <h4>Goals</h4>
           <p>
             My biggest mission of 2022 is be a web developer.compeleteing
-            programming hero course sincerly .achiving SCIC .compeleteing
-            programming hero course sincerly .achiving SCIC .compeleteing
             programming hero course sincerly .achiving SCIC .
           </p>
         </div>
