--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
     <section class="my_mission">
       <div>
-        <h2>My Mission in <span> 2022</span></h2>
+        <h2 class="h2header">My Mission in <span> 2022</span></h2>
       </div>
       <div class="my_missions">
         <div id="mission">
@@ -78,6 +78,27 @@
             programming hero course sincerly .achiving SCIC .
           </p>
         </div>
+      </div>
+    </section>
+    <section class="develop">
+      <div>
+        <img
+          src="images/pictures/coding.png"
+          alt="girlsworking image"
+          width="200"
+          height="200"
+        />
+      </div>
+      <div>
+        <h3>Develop Without Limits</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
+          voluptatum! Sunt blanditiis velit animi rem quae officia assumenda
+          sint. Fuga!
+        </p>
+        <a class="buttons" href="https://css-tricks.com/snippets/html/glyphs/"
+          >Read the Documentation</a
+        >
       </div>
     </section>
   </body>
