--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           src="images/person/person-0.png"
           alt="person image"
           width="400"
-          height="450"
+          height="400"
         />
       </div>
     </section>
@@ -83,23 +83,58 @@
     <section class="develop">
       <div>
         <img
+          class="coding_img"
           src="images/pictures/coding.png"
           alt="girlsworking image"
-          width="200"
-          height="200"
+          width="300"
+          height="300"
         />
       </div>
-      <div>
+      <div class="develop_div">
         <h3>Develop Without Limits</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
           voluptatum! Sunt blanditiis velit animi rem quae officia assumenda
-          sint. Fuga!
+          sint. Fuga!voluptatum! Sunt blanditiis velit animi rem quae officia
+          assumenda sint. Fuga! voluptatum! Sunt blanditiis velit animi rem quae
+          officia assumenda sint. Fuga!
         </p>
         <a class="buttons" href="https://css-tricks.com/snippets/html/glyphs/"
           >Read the Documentation</a
         >
       </div>
     </section>
+
+    <section class="global_community">
+      <div id="global_text">
+        <h3>Know our Global Community</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
+          voluptatum! Sunt blanditiis velit animi rem quae officia assumenda
+          sint. Fuga!adipisicing elit. Delectus, voluptatum! Sunt blanditiis
+          velit animi rem quae officia assumenda sint. Fuga!adipisicing elit.
+          Delectus, voluptatum! Sunt blanditiis velit animi rem quae officia
+          assumenda sint. Fuga!
+        </p>
+        <a class="buttons" href="https://css-tricks.com/snippets/html/glyphs/"
+          >Read the Documentation</a
+        >
+      </div>
+      <div>
+        <img
+          class="project_img"
+          src="images/pictures/project.png"
+          alt="girlsworking image"
+          width="300"
+          height="300"
+        />
+      </div>
+    </section>
+    <footer>
+      <h5>Mission <span class="foot">2022</span></h5>
+      <p class="foot_tagline">
+        <small>Hard work ,perseverance,and Determination for 2022</small>
+      </p>
+    </footer>
   </body>
 </html>
