--- a/index.html
+++ b/index.html
@@ -130,6 +130,36 @@
         />
       </div>
     </section>
+
+    <section class="form">
+      <div class="location">
+        <div></div>
+      </div>
+      <div class="massage">
+        <div>
+          <h2>CONTACT US :</h2>
+        </div>
+        <form action="" method="get" class="form-example">
+          <div class="form-example">
+            <label for="name">Enter your name: </label>
+            <input type="text" name="name" id="name" required />
+          </div>
+          <div class="form-example">
+            <label for="email">Enter your email: </label>
+            <input type="email" name="email" id="email" required />
+          </div>
+
+          <div class="form-example">
+            <label for="text">Enter Massage : </label>
+            <input type="text" name="text" id="text" required />
+            <div class="form-example submit-btn">
+              <input type="submit" value="Submit" />
+            </div>
+          </div>
+        </form>
+      </div>
+    </section>
+
     <footer>
       <h5>Mission <span class="foot">2022</span></h5>
       <p class="foot_tagline">
