--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
           />
           <h4>Mission</h4>
           <p>
-            My biggest mission of 2022 is be a web developer.compeleteing
-            programming hero course sincerly .achiving SCIC .
+            Being professional web development, mobile application and digital
+            marketing company. Our mission is to provide customer-centric,
+            result-oriented, cost-competitive innovative & functional IT
+            Solutions to our valuable global clients. .
           </p>
         </div>
         <div id="vission">
@@ -62,8 +64,9 @@
           />
           <h4>Vission</h4>
           <p>
-            My biggest mission of 2022 is be a web developer.compeleteing
-            programming hero course sincerly .achiving SCIC .
+            We enable your Digital Initiatives based on Skilled Talent and the
+            Right Technology. Consulting firm dedicated to designing, building
+            and verifying software solutions. System Integration. Mobile
           </p>
         </div>
         <div id="goals">
@@ -74,8 +77,9 @@
           />
           <h4>Goals</h4>
           <p>
-            My biggest mission of 2022 is be a web developer.compeleteing
-            programming hero course sincerly .achiving SCIC .
+            The main objective when working as a developer is to be productive
+            and deliver value to the company. As a developer or a CTO, the aim
+            is to build practical applications that will be 100% successful.
           </p>
         </div>
       </div>
@@ -93,11 +97,11 @@
       <div class="develop_div">
         <h3>Develop Without Limits</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
-          voluptatum! Sunt blanditiis velit animi rem quae officia assumenda
-          sint. Fuga!voluptatum! Sunt blanditiis velit animi rem quae officia
-          assumenda sint. Fuga! voluptatum! Sunt blanditiis velit animi rem quae
-          officia assumenda sint. Fuga!
+          We all need new ideas, new connections and new energy to lead us into
+          this next year. Reignite your interest in other programs and people by
+          actively connecting to others in out-of-school time. Your professional
+          network will offer you support and connection when the going gets
+          tough…
         </p>
         <a class="buttons" href="https://css-tricks.com/snippets/html/glyphs/"
           >Read the Documentation</a
@@ -109,12 +113,11 @@
       <div id="global_text">
         <h3>Know our Global Community</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
-          voluptatum! Sunt blanditiis velit animi rem quae officia assumenda
-          sint. Fuga!adipisicing elit. Delectus, voluptatum! Sunt blanditiis
-          velit animi rem quae officia assumenda sint. Fuga!adipisicing elit.
-          Delectus, voluptatum! Sunt blanditiis velit animi rem quae officia
-          assumenda sint. Fuga!
+          Though our name has changed and our impact has grown to reach over 35
+          countries, our commitment to partnering with communities to bring
+          about sustainable, positive change remains the same. In 2020, Global
+          Communities merged with Project Concern International (PCI), a global
+          development organization driving innovation from the
         </p>
         <a class="buttons" href="https://css-tricks.com/snippets/html/glyphs/"
           >Read the Documentation</a
@@ -132,13 +135,10 @@
     </section>
 
     <section class="form">
-      <div class="location">
-        <div></div>
+      <div>
+        <h2>CONTACT US :</h2>
       </div>
       <div class="massage">
-        <div>
-          <h2>CONTACT US :</h2>
-        </div>
         <form action="" method="get" class="form-example">
           <div class="form-example">
             <label for="name">Enter your name: </label>
